# aiplayer

./: .gitignore  .gitmodules  CMakeLists.txt
config/: blhx-player-battle.yaml  blhx-player-renwu.yaml  blhx-player-yanxi.yaml  blhx-player.yaml  blhx_detect.yaml  blhx_player_battle.yaml  chineseocr.yaml  config.yaml  config_blhx.yaml  server.yaml
config/players/: blhx.yaml  wyds.yaml
demo/: CMakeLists.txt  demo.cc  demo.cpp
demo/adb_client/: client.cpp
demo/client/: client.cpp
demo/server/: http_server.cpp  http_server.h  server.cpp
docker/: deploy.sh  docker-compose.yml
docker/openstf/: Dockerfile  start.sh
docker/paddleocr/: Dockerfile  Dockerfile.cpu
docker/scrcpy/: Dockerfile  start.sh
script/: run_blhx.sh
source/application/: application.h  blhx_application.cpp  blhx_application.h  common_application.cpp  common_application.h
source/application/parser/: yaml_parser.cpp  yaml_parser.h
source/blhx_player/: battle_player.cpp  battle_player.h  blhx_player.h  renwu_player.cpp  renwu_player.h  yanxi_player.cpp  yanxi_player.h
source/common/: common.h  common_types.h  log.h  util_defines.h  util_functions.cpp  util_functions.h  util_types.h
source/detect/: detect.h
source/device_operation/: device_operation.h  minitouch_operation.cpp  minitouch_operation.h  touch_screen_operation.h
source/image_source/: image_source.h  minicap_source.cpp  minicap_source.h
source/input/image/: file_input.cpp  file_input.h  image_input.h  minicap_input.cpp  minicap_input.h  scrcpy_input.cpp  scrcpy_input.h
source/input/request/: http_request.cpp  http_request.h  request.h
source/object_detect/: object_detect.h  yolov5_detect.cpp  yolov5_detect.h
source/ocr/: ocr.h  paddle_ocr.cpp  paddle_ocr.h
source/ocr_detect/: chineselite_ocr.cpp  chineselite_ocr.h  ocr_detect.h  ocr_http_client.cpp  ocr_http_client.h  paddle_ocr.cpp  paddle_ocr.h
source/ocr_detect/chineselite/: chineselite_struct.h  crnn_net.cpp  crnn_net.h  db_net.cpp  db_net.h
source/output/notify/: event_notify.h  miao_notify.cpp  miao_notify.h
source/output/operation/: device_operation.h  dummy_operation.h  minitouch_operation.cpp  minitouch_operation.h  scrcpy_operation.cpp  scrcpy_operation.h
source/player/: blhx_player.cpp  blhx_player.h  common_player.cpp  common_player.h  player.h
source/player/blhx/: base_model.h  battle_mode.h  battle_player.cpp  battle_player.h  renwu_player.h  yanxi_mode.cpp  yanxi_mode.h  yanxi_player.cpp  yanxi_player.h
source/sink/: dummy_operation.h  minitouch_operation.cpp  minitouch_operation.h
source/sink/notify/: miao_notify.cpp  miao_notify.h
source/sink/operation/: minitouch_operation.cpp  minitouch_operation.h
source/source/: image_source.cpp  image_source.h  minicap_source.h  source.h
source/source/image/: image_source.cpp  image_source.h  minicap_source.cpp  minicap_source.h  source.h
source/source/request/: http_request.cpp  http_request.h  request.h
source/utils/: image_utils.cpp  image_utils.h  log.h  util_defines.h  util_functions.cpp  util_functions.h  util_types.h
src/img_reader/: android_remote_screenshot_reader.cc  android_remote_screenshot_reader.cpp  android_remote_screenshot_reader.h  imagefile_reader.cc  imagefile_reader.cpp  imagefile_reader.h  reader.cc  reader.h  video_reader.cc  video_reader.cpp  video_reader.h
src/object_detect/: detect.h  yolov5_detect.cc  yolov5_detect.cpp  yolov5_detect.h
src/ocr/: ocr.h  ocr_http_client.cpp  ocr_http_client.h
src/operator/: android_remote_operator.cc  android_remote_operator.cpp  android_remote_operator.h  operator.cc  operator.cpp  operator.h
src/player/: blhx_player.cc  blhx_player.cpp  blhx_player.h  player.h
src/utils/: util_converter.cpp  util_converter.h  util_functions.cc  util_functions.cpp  util_functions.h  util_types.h
tool/: CMakeLists.txt  http_request.py  show_img.py
tool/cpp/: click.cpp  fetch_image.cpp
tool/script/: paddleocr.py  paint_rect.py  run_blhx.sh  show_img.py
tool/web/: web.py
unittest/: CMakeLists.txt  detect_test.cpp  ocr_test.cpp  player_test.cpp  test.cpp  test_detect.cc  test_detect.cpp  test_main.cpp  test_ocr.cpp  test_player.cc  test_player.cpp  test_utils.cc
